solc_ossfuzz_seed_corpus/test_sol/test_53f832c593b2383c1f4ebbfaf52542136f7e30665db7a073d525bed77b5ecfb2_9a37f8d505ff04cf98006aee854513f4df8b2feb_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  function f0(uint72 i0,int152 i1) public   
  {
  }
  using L0 for *;
  function f1(address payable i0) public    returns(function () internal   returns (function (int128, bool, uint224) external   returns (string[] memory, bytes7), address payable) o0)
  {
  }
  event ev0(int176  ep0, bytes14 indexed ep1, bytes17 indexed ep2);
  function f2(uint224 i0) external    returns(bool o0)
  {
  }
  event ev1();
  function f3(int40 i0) external    returns(bytes memory o0)
  {
    while ((uint112(5192296858534827628530496329220095) != uint112(5192296858534827628530496329220095)))
    {
    }
    function (bytes5, uint80[] memory) internal   returns (address, string memory, int184) l0;
    assembly
    {
    }
  }
}
function f4()     returns(int56 o0,address payable o1,function (bytes1) external   returns (function (bytes21[2] memory) external  , bytes13) o2)
{
}
struct St0 {
  address payable el0;
  function (uint32, function (bool, bytes memory, bool) external   returns (bool), int128) internal   returns (int176[] memory, string memory, function (int216[] memory) external   returns (bytes24, bool, int248[1] memory)) el1;
  uint152 el2;
  address el3;
}
using L0 for uint;
// ----
// TypeError 4103: (su0.sol:162-292): Internal type is not allowed for public or external functions.
